# image2csv

./: .gitignore  README.md  pyproject.toml
src/image2csv/: __init__.py  config.py  extract.py  format.py
src/image2csv/cli/: __init__.py  parsers.py
src/image2csv/parse/: base.py  flash.py  xp.py
tests/: test_parse.py
tests/images/flash_benefits/: __expected_results__.json
