[build-system]
requires = ["packaging", "setuptools>=63.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image2csv"
version = "0.0.1"
authors = [
    { name = "Marcelo Soares", email = "marcelo.me.soares@gmail.com" },
]
description = "."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.3",
    "pandas>=1.3.3",
    "pytesseract==0.3.10",
]

# [project.scripts]
# image2csv = "image2csv.cli:main"


[project.optional-dependencies]
dev = [
    "black",
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/marcelomendoncasoares/image2csv"
